@@ -1,10 +1,12 @@
 package net.weesli.rClaim.database;
 
 import com.google.common.reflect.TypeToken;
+import eu.decentsoftware.holograms.api.utils.scheduler.S;
 import net.weesli.rClaim.RClaim;
 import net.weesli.rClaim.enums.StorageType;
 import net.weesli.rClaim.gson.GsonProvider;
 import net.weesli.rClaim.modal.ClaimEffect;
+import net.weesli.rClaim.modal.ClaimTag;
 import net.weesli.rClaim.utils.ClaimManager;
 import net.weesli.rClaim.tasks.ClaimTask;
 import net.weesli.rClaim.modal.Claim;
@@ -13,6 +15,7 @@ import net.weesli.rClaim.enums.ClaimStatus;
 import net.weesli.rozsLib.color.ColorBuilder;
 import net.weesli.rozsLib.database.mysql.Column;
 import net.weesli.rozsLib.database.mysql.Insert;
+import net.weesli.rozsLib.database.mysql.Result;
 import net.weesli.rozsLib.database.mysql.Update;
 import net.weesli.rozsLib.database.sqlite.SQLiteBuilder;
 import org.bukkit.Bukkit;
@@ -67,6 +70,7 @@ public class SQLiteStorage implements Database {
         }
         addColumn("effects");
         addColumn("block");
+        addColumn("tags");
     }
 
     public static SQLiteStorage getInstance(){
@@ -96,7 +100,8 @@ public class SQLiteStorage implements Database {
                         .map(claimEffect -> GsonProvider.getGson().toJson(claimEffect))
                         .toList() :
                 Collections.emptyList();
-        Insert insert = new Insert("rclaims_claims", Arrays.asList("id", "owner", "members", "claim_statues", "chunk", "permissions", "time", "home", "isCenter", "centerId", "effects", "block"), Arrays.asList(claim.getID(),claim.getOwner().toString(), claim.getMembers().stream().map(UUID::toString).collect(Collectors.toList()).toString(),claim.getClaimStatuses().stream().map(ClaimStatus::name).collect(Collectors.toList()).toString(), claim.getChunk().getWorld().getName() + ":" + claim.getChunk().getX() + ":" + claim.getChunk().getZ(), formatted_permissions, time.get(), location, claim.isCenter(), claim.getCenterId(), effect.toString(), claim.getBlock().name()));
+        List<String> tags = claim.getClaimTags().stream().map(element -> GsonProvider.getGson().toJson(element)).toList();
+        Insert insert = new Insert("rclaims_claims", Arrays.asList("id", "owner", "members", "claim_statues", "chunk", "permissions", "time", "home", "isCenter", "centerId", "effects", "block", "tags"), Arrays.asList(claim.getID(),claim.getOwner().toString(), claim.getMembers().stream().map(UUID::toString).collect(Collectors.toList()).toString(),claim.getClaimStatuses().stream().map(ClaimStatus::name).collect(Collectors.toList()).toString(), claim.getChunk().getWorld().getName() + ":" + claim.getChunk().getX() + ":" + claim.getChunk().getZ(), formatted_permissions, time.get(), location, claim.isCenter(), claim.getCenterId(), effect.toString(), claim.getBlock().name(), tags));
         try {
             builder.insert(connection,insert);
         } catch (SQLException e) {
@@ -111,6 +116,7 @@ public class SQLiteStorage implements Database {
             statement.setString(1,id);
             try(ResultSet rs = statement.executeQuery()){
                 if (rs.next()){
+                    Result result = new Result(rs);
                     UUID owner = UUID.fromString(rs.getString("owner"));
                     List<ClaimStatus> claimStatuses = Stream.of(rs.getString("claim_statues").replace("[" ,"").replaceAll("]", "").split(", ")).filter(key-> {
                         try {
@@ -138,11 +144,13 @@ public class SQLiteStorage implements Database {
                     Map<UUID, List<ClaimPermission>> permissions = solvePermission(rs.getString("permissions"));
                     List<ClaimEffect> effects = GsonProvider.getGson().fromJson(rs.getString("effects"), new TypeToken<List<ClaimEffect>>(){}.getType());
                     Material material = (rs.getString("block") == null ? Material.BEDROCK : Material.getMaterial(rs.getString("block")));
+                    List<ClaimTag> claimTags = GsonProvider.getGson().fromJson(rs.getString("tags"), new TypeToken<List<ClaimTag>>(){}.getType());
                     Claim claim = new Claim(id,owner,members,claimStatuses,chunk, isCenter);
                     claim.setCenterId(centerId);
                     claim.setHomeLocation(homeLocation);
                     claim.setClaimPermissions(permissions);
                     claim.setEffects(new ArrayList<>(effects));
+                    claim.setClaimTags(claimTags != null ? claimTags : new ArrayList<>());
                     if (claim.isCenter()){
                         claim.setBlock(material);
                     }
@@ -179,7 +187,8 @@ public class SQLiteStorage implements Database {
                         .map(claimEffect -> GsonProvider.getGson().toJson(claimEffect))
                         .toList() :
                 Collections.emptyList();
-        Update update = new Update("rclaims_claims", Arrays.asList("id", "owner", "members", "claim_statues", "chunk", "permissions", "time", "home", "isCenter", "centerId", "effects", "block"), Arrays.asList(claim.getID(),claim.getOwner().toString(), claim.getMembers().stream().map(UUID::toString).collect(Collectors.toList()).toString(),claim.getClaimStatuses().stream().map(ClaimStatus::name).collect(Collectors.toList()).toString(), claim.getChunk().getWorld().getName() + ":" + claim.getChunk().getX() + ":" + claim.getChunk().getZ(), formatted_permissions, time, location, claim.isCenter(), claim.getCenterId(), effect.toString(), claim.getBlock().name()), where);
+        List<String> tags = claim.getClaimTags().stream().map(element -> GsonProvider.getGson().toJson(element)).toList();
+        Update update = new Update("rclaims_claims", Arrays.asList("id", "owner", "members", "claim_statues", "chunk", "permissions", "time", "home", "isCenter", "centerId", "effects", "block", "tags"), Arrays.asList(claim.getID(),claim.getOwner().toString(), claim.getMembers().stream().map(UUID::toString).collect(Collectors.toList()).toString(),claim.getClaimStatuses().stream().map(ClaimStatus::name).collect(Collectors.toList()).toString(), claim.getChunk().getWorld().getName() + ":" + claim.getChunk().getX() + ":" + claim.getChunk().getZ(), formatted_permissions, time, location, claim.isCenter(), claim.getCenterId(), effect.toString(), claim.getBlock().name(), tags), where);
         try {
             builder.update(connection,update);
         } catch (SQLException e) {
@@ -215,51 +224,17 @@ public class SQLiteStorage implements Database {
 
     @Override
     public List<Claim> getClaims() {
-        String sql = "SELECT * FROM rclaims_claims";
+        String sql = "SELECT id, time FROM rclaims_claims";
         try(Statement statement = connection.createStatement()){
             ResultSet rs = statement.executeQuery(sql);
             List<Claim> claims = new ArrayList<>();
             while (rs.next()){
                 String id = rs.getString("id");
-                UUID owner = UUID.fromString(rs.getString("owner"));
-                List<ClaimStatus> claimStatuses = Stream.of(rs.getString("claim_statues").replace("[" ,"").replaceAll("]", "").split(", ")).filter(key-> {
-                    try {
-                        ClaimStatus.valueOf(key);
-                        return true;
-                    }catch (IllegalArgumentException e){
-                        return false;
-                    }
-                }).map(ClaimStatus::valueOf).collect(Collectors.toList());
-                Chunk chunk = solveChunk(rs.getString("chunk"));
-                List<UUID> members = Arrays.stream(rs.getString("members").replace("[", "").replace("]", "").split(", ")).collect(Collectors.toList()).stream()
-                        .filter(member -> {
-                            try {
-                                UUID.fromString(member);
-                                return true;
-                            } catch (IllegalArgumentException e) {
-                                return false;
-                            }
-                        })
-                        .map(UUID::fromString)
-                        .collect(Collectors.toList());
-                Map<UUID, List<ClaimPermission>> permissions = solvePermission(rs.getString("permissions"));
+                Claim claim = getClaim(id);
                 int time = rs.getInt("time");
-                boolean isCenter = rs.getBoolean("isCenter");
-                String centerId = rs.getString("centerId");
-                Location homeLocation = solveHome(rs.getString("home"));
-                List<ClaimEffect> effects = GsonProvider.getGson().fromJson(rs.getString("effects"), new TypeToken<List<ClaimEffect>>(){}.getType());
-                Material material = (rs.getString("block") == null ? Material.BEDROCK : Material.getMaterial(rs.getString("block")));
-                Claim claim = new Claim(id,owner,members,claimStatuses,chunk, isCenter);
-                claim.setCenterId(centerId);
-                claim.setClaimPermissions(permissions);
-                claim.setHomeLocation(homeLocation);
-                claim.setEffects(new ArrayList<>(effects));
-                if (claim.isCenter()){
-                    claim.setBlock(material);
-                }
                 claims.add(claim);
                 if (!isTimerOnline(id)){
-                    ClaimManager.getTasks().add(new ClaimTask(id,time, isCenter));
+                    ClaimManager.getTasks().add(new ClaimTask(id,time, claim.isCenter()));
                 }
             }
             return claims;
